# Rust_SQLite_BBS

bbs-sqlite/: Cargo.toml  bbs.db
bbs-sqlite/src/: main.rs
bbs-sqlite/templates/: index.html
