[package]
name = "bbs-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
askama = "0.12.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0.185"
serde_derive = "1.0.185"
